<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yuri.cde.fragments.entrada.InicioFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_titulo_inicio"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center"
                android:text="@string/titulo_inicio"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_titulo_inicio" />

            <TextView
                android:id="@+id/tv_titulo_objetivo"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@+id/iv_logo"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center_vertical"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/titulo_inicio_objetivo"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_corpo_objetivo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_titulo_objetivo"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="2dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/corpo_inicio_objetivo" />

            <TextView
                android:id="@+id/tv_titulo_consideracoes"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@+id/tv_corpo_objetivo"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center_vertical"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/titulo_inicio_consideracoes"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_corpo_consideracoes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_titulo_consideracoes"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="2dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/corpo_inicio_consideracoes" />

            <TextView
                android:id="@+id/tv_titulo_instrucoes"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@+id/tv_corpo_consideracoes"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center_vertical"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/titulo_inicio_instrucoes"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_corpo_instrucoes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_titulo_instrucoes"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="2dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/corpo_inicio_instrucoes" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
